# oijson

./: .gitignore  CMakeLists.txt  Documentation.md  LICENSE.txt  README.md
res/: test.json
src/: main.c  oijson.c  oijson.h
